[tool.poetry]
name = "flask-railway-api"
version = "0.1.0"
description = ""
authors = ["Ezra Citron <ezracitron@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_railway_api"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
